# options-pricing-volatility-hedging

./: CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/processed/: synthetic_option_surface.csv
data/raw/: README.md  option_chain_snapshot_template.csv
docs/: future_work.md  methodology.md  results_summary.md  technical_notes.md  validation.md
notebooks/: 01_option_payoffs.ipynb  02_no_arbitrage_and_parity.ipynb  03_black_scholes_pricing.ipynb  04_greeks_and_risk.ipynb  05_implied_volatility.ipynb  06_volatility_surface.ipynb  07_dynamic_delta_hedging.ipynb  08_pnl_attribution.ipynb  09_real_option_chain_iv_snapshot.ipynb
outputs/: environment.txt  test_report.txt
outputs/tables/: hedge_frequency_summary.csv  hedging_paths_daily_no_cost.csv  hedging_paths_monthly_no_cost.csv  hedging_paths_weekly_no_cost.csv  iv_solver_comparison.csv  realized_vs_implied_volatility_summary.csv  selected_hedge_history.csv  selected_path_greek_intervals.csv  selected_path_pnl_attribution.csv  surface_calendar_checks.csv  surface_iv_recovery.csv  surface_strike_arbitrage_checks.csv
scripts/: run_experiments.py
src/options_lab/: __init__.py  arbitrage.py  black_scholes.py  delta_hedging.py  greeks.py  implied_volatility.py  market_data.py  metrics.py  numerical_greeks.py  payoffs.py  pnl_attribution.py  price_paths.py  risk.py  volatility_surface.py
tests/: test_hedging_attribution.py  test_iv_surface.py  test_payoffs_arbitrage.py  test_pricing_greeks.py
